--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.8.3 (February 8th, 2010)
+----------------------------------
+
+- New ability to manage network interfaces: start, stop, and view existing
+  interfaces. Provision new bridge, bond, and vlan devices.
+- New option to 'customize VM before install', which allows adjusting most
+  VM options from the install wizard.
+
 Release 0.8.2 (December 14th, 2009)
 -----------------------------------
 
