Sending translation for Hungarian

--- a/po/hu.po
+++ b/po/hu.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: virt-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-02-08 17:14-0500\n"
-"PO-Revision-Date: 2010-02-23 09:51+0100\n"
+"PO-Revision-Date: 2010-02-23 10:02+0100\n"
 "Last-Translator: Nikolas Slivka <snicore@gmail.com>\n"
 "Language-Team: Hungarian Fedora Translation Team <fedor-trans-hu@redhat.org>\n"
 "MIME-Version: 1.0\n"
@@ -2468,9 +2468,8 @@ msgid "_Bind Host:"
 msgstr "Kapcsolt gazda:"
 
 #: ../src/vmm-add-hardware.glade.h:60
-#, fuzzy
 msgid "_Device type:"
-msgstr "Eszköz tipusa:"
+msgstr "Esz_köz tipusa:"
 
 #: ../src/vmm-add-hardware.glade.h:61
 msgid "_Device:"
@@ -2485,9 +2484,8 @@ msgid "_Finish"
 msgstr "_Befejezés"
 
 #: ../src/vmm-add-hardware.glade.h:63
-#, fuzzy
 msgid "_Keymap:"
-msgstr "Billentyűzet kiosztása:"
+msgstr "Billentyűzet _kiosztása:"
 
 #: ../src/vmm-add-hardware.glade.h:64
 #: ../src/vmm-choose-cd.glade.h:7
@@ -2500,30 +2498,25 @@ msgstr "_MAC-cím:"
 
 #: ../src/vmm-add-hardware.glade.h:66
 #: ../src/vmm-create-net.glade.h:54
-#, fuzzy
 msgid "_Mode:"
-msgstr "Mód:"
+msgstr "_Mód:"
 
 #: ../src/vmm-add-hardware.glade.h:67
-#, fuzzy
 msgid "_Model:"
-msgstr "Modell:"
+msgstr "_Modell:"
 
 #: ../src/vmm-add-hardware.glade.h:68
-#, fuzzy
 msgid "_Other:"
-msgstr "Egyéb:"
+msgstr "_Egyéb:"
 
 #: ../src/vmm-add-hardware.glade.h:69
-#, fuzzy
 msgid "_Path:"
-msgstr "Elérési út:"
+msgstr "_Elérési út:"
 
 #: ../src/vmm-add-hardware.glade.h:70
 #: ../src/vmm-migrate.glade.h:12
-#, fuzzy
 msgid "_Port:"
-msgstr "Port:"
+msgstr "_Port:"
 
 #: ../src/vmm-add-hardware.glade.h:71
 msgid "_Size:"
@@ -2531,9 +2524,8 @@ msgstr "_Méret:"
 
 #: ../src/vmm-add-hardware.glade.h:72
 #: ../src/vmm-create-pool.glade.h:17
-#, fuzzy
 msgid "_Type:"
-msgstr "Típus:"
+msgstr "_Típus:"
 
 #: ../src/vmm-add-hardware.glade.h:73
 msgid "aa:bb:cc:dd:ee:ff"
@@ -2545,19 +2537,16 @@ msgid "label"
 msgstr "címke"
 
 #: ../src/vmm-choose-cd.glade.h:1
-#, fuzzy
 msgid "<b>Choose Source Device or File</b>"
-msgstr "<b>Konzolok</b>"
+msgstr "<b>Válassza ki a forrás eszközt vagy fájlt</b>"
 
 #: ../src/vmm-choose-cd.glade.h:2
-#, fuzzy
 msgid "CD-_ROM or DVD"
-msgstr "_CD-ROM vagy DVD"
+msgstr "CD-_ROM vagy DVD"
 
 #: ../src/vmm-choose-cd.glade.h:3
-#, fuzzy
 msgid "Choose Media"
-msgstr "Kötet _választása:"
+msgstr "Média kiválasztása:"
 
 #: ../src/vmm-choose-cd.glade.h:4
 #: ../src/vmm-clone.glade.h:23
@@ -2741,9 +2730,8 @@ msgid "DHCP"
 msgstr "DHCP"
 
 #: ../src/vmm-create-net.glade.h:20
-#, fuzzy
 msgid "E_nd:"
-msgstr "Vége:"
+msgstr "_Vége:"
 
 #: ../src/vmm-create-net.glade.h:21
 msgid "End Address"
@@ -2849,9 +2837,8 @@ msgid "You will need to choose an IPv4 address space for the virtual network:"
 msgstr ""
 
 #: ../src/vmm-create-net.glade.h:50
-#, fuzzy
 msgid "_Destination:"
-msgstr "Cél:"
+msgstr "_Cél:"
 
 #: ../src/vmm-create-net.glade.h:51
 msgid "_Enable DHCP:"
@@ -2880,9 +2867,8 @@ msgid "Add a New Storage Pool"
 msgstr ""
 
 #: ../src/vmm-create-pool.glade.h:3
-#, fuzzy
 msgid "B_rowse"
-msgstr "Tallózás"
+msgstr "_Tallózás"
 
 #: ../src/vmm-create-pool.glade.h:4
 #, fuzzy
@@ -2890,19 +2876,16 @@ msgid "B_uild Pool:"
 msgstr "Állapotfigyelés hozzáadása"
 
 #: ../src/vmm-create-pool.glade.h:5
-#, fuzzy
 msgid "Bro_wse"
-msgstr "Tallózás"
+msgstr "Ta_llózás"
 
 #: ../src/vmm-create-pool.glade.h:6
-#, fuzzy
 msgid "F_ormat:"
-msgstr "Formátum:"
+msgstr "F_ormátum:"
 
 #: ../src/vmm-create-pool.glade.h:8
-#, fuzzy
 msgid "Host Na_me:"
-msgstr "Gazdanév:"
+msgstr "G_azdanév:"
 
 #: ../src/vmm-create-pool.glade.h:10
 msgid "Specify a storage location to be later split into virtual machine storage."
@@ -2919,19 +2902,16 @@ msgstr "2. lépés a 2-ből"
 #: ../src/vmm-create-pool.glade.h:14
 #: ../src/vmm-create-vol.glade.h:24
 #: ../src/vmm-create.glade.h:51
-#, fuzzy
 msgid "_Name:"
-msgstr "Név:"
+msgstr "_Név:"
 
 #: ../src/vmm-create-pool.glade.h:15
-#, fuzzy
 msgid "_Source Path:"
-msgstr "Forrás útvonal:"
+msgstr "Forrá_s útvonal:"
 
 #: ../src/vmm-create-pool.glade.h:16
-#, fuzzy
 msgid "_Target Path:"
-msgstr "Cél útvonal:"
+msgstr "Cél ú_tvonal:"
 
 #: ../src/vmm-create-vol.glade.h:1
 msgid "<span size='large'>Storage Volume Quota</span>"
@@ -2986,14 +2966,12 @@ msgid "Max Ca_pacity:"
 msgstr ""
 
 #: ../src/vmm-create-vol.glade.h:21
-#, fuzzy
 msgid "_Allocation:"
-msgstr "Kiosztás:"
+msgstr "_Kiosztás:"
 
 #: ../src/vmm-create-vol.glade.h:23
-#, fuzzy
 msgid "_Format:"
-msgstr "Formátum:"
+msgstr "_Formátum:"
 
 #: ../src/vmm-create-vol.glade.h:25
 msgid "available space:"
@@ -3033,24 +3011,20 @@ msgid "Advanced options"
 msgstr "Speciális lehetőségek"
 
 #: ../src/vmm-create.glade.h:10
-#, fuzzy
 msgid "B_rowse..."
-msgstr "Tallózás…"
+msgstr "T_allózás…"
 
 #: ../src/vmm-create.glade.h:11
-#, fuzzy
 msgid "Bro_wse..."
-msgstr "Tallózás…"
+msgstr "Ta_llózás…"
 
 #: ../src/vmm-create.glade.h:12
-#, fuzzy
 msgid "C_PUs:"
-msgstr "CPU-k"
+msgstr "C_PU-k:"
 
 #: ../src/vmm-create.glade.h:13
-#, fuzzy
 msgid "C_onnection:"
-msgstr "Kapcsolat:"
+msgstr "Kapcs_olat:"
 
 #: ../src/vmm-create.glade.h:14
 msgid "C_reate a disk image on the computer's hard drive"
@@ -3093,7 +3067,6 @@ msgid "Install"
 msgstr "Telepítés"
 
 #: ../src/vmm-create.glade.h:24
-#, fuzzy
 msgid "Kernel options:"
 msgstr "Kernel opciók:"
 
@@ -3110,23 +3083,20 @@ msgid "Memory"
 msgstr "Memória"
 
 #: ../src/vmm-create.glade.h:30
-#, fuzzy
 msgid "Network _Boot (PXE)"
-msgstr "Hálózati rendszerindítás (PXE)"
+msgstr "Hálózati _rendszerindítás (PXE)"
 
 #: ../src/vmm-create.glade.h:31
-#, fuzzy
 msgid "Network _Install (HTTP, FTP, or NFS)"
-msgstr "Hálózati telepítés (HTTP, FTP, vagy NFS)"
+msgstr "Hálózat_i telepítés (HTTP, FTP, vagy NFS)"
 
 #: ../src/vmm-create.glade.h:32
 msgid "New VM"
 msgstr "Új VM"
 
 #: ../src/vmm-create.glade.h:33
-#, fuzzy
 msgid "OS _type:"
-msgstr "OS-típus:"
+msgstr "OS-_típus:"
 
 #: ../src/vmm-create.glade.h:34
 msgid "PXE"
@@ -3143,9 +3113,8 @@ msgid "Select _managed or other existing storage"
 msgstr "Menedzselt vagy egyéb meglévő tároló választása"
 
 #: ../src/vmm-create.glade.h:37
-#, fuzzy
 msgid "Set a fixed _MAC address"
-msgstr "Állandó mac cím beállítása"
+msgstr "Állandó _MAC-cím beállítása"
 
 #: ../src/vmm-create.glade.h:39
 msgid "URL"
@@ -3161,14 +3130,12 @@ msgid "URL:"
 msgstr "URL:"
 
 #: ../src/vmm-create.glade.h:42
-#, fuzzy
 msgid "Use CD_ROM or DVD"
-msgstr "CD-ROM vagy DVD használata"
+msgstr "CD-_ROM vagy DVD használata"
 
 #: ../src/vmm-create.glade.h:43
-#, fuzzy
 msgid "Use _ISO image:"
-msgstr "ISO képfájl kiválasztása:"
+msgstr "_ISO képfájl használata:"
 
 #: ../src/vmm-create.glade.h:44
 #, fuzzy
@@ -3186,9 +3153,8 @@ msgid "_Enable storage for this virtual machine"
 msgstr "Tároló engedélyezése ehhez a virtuális géphez"
 
 #: ../src/vmm-create.glade.h:48
-#, fuzzy
 msgid "_GB"
-msgstr "GB"
+msgstr "_GB"
 
 #: ../src/vmm-create.glade.h:49
 #, fuzzy
@@ -3196,14 +3162,12 @@ msgid "_Local install media (ISO image or CDROM)"
 msgstr "Helyi telepítési adathordozó (ISO képfájl vagy CDROM)"
 
 #: ../src/vmm-create.glade.h:50
-#, fuzzy
 msgid "_Memory (RAM):"
-msgstr "Memória (RAM):"
+msgstr "_Memória (RAM):"
 
 #: ../src/vmm-create.glade.h:52
-#, fuzzy
 msgid "_Version:"
-msgstr "Verzió:"
+msgstr "_Verzió:"
 
 #: ../src/vmm-create.glade.h:53
 #, fuzzy
@@ -3215,9 +3179,8 @@ msgid "Delete Confirmation"
 msgstr "Törlés megerősítése"
 
 #: ../src/vmm-delete.glade.h:2
-#, fuzzy
 msgid "Delete _associated storage files"
-msgstr "Hozzárendelt tároló fájlok törlése"
+msgstr "Hozzárendelt tároló fájlok _törlése"
 
 #: ../src/vmm-details.glade.h:1
 msgid ""
@@ -3232,7 +3195,6 @@ msgid "<b>Autostart</b>"
 msgstr "<b>Automatikus indítás</b>"
 
 #: ../src/vmm-details.glade.h:4
-#, fuzzy
 msgid "<b>Basic Details</b>"
 msgstr "<b>Alapvető részletek</b>"
 
@@ -3305,9 +3267,8 @@ msgid "<b>insert type</b>"
 msgstr "<b>típus beszúrása</b>"
 
 #: ../src/vmm-details.glade.h:22
-#, fuzzy
 msgid "A_dd Hardware"
-msgstr "Hardver"
+msgstr "H_ardver hozzáadása"
 
 #: ../src/vmm-details.glade.h:24
 #: ../src/vmm-host.glade.h:12
@@ -3357,9 +3318,8 @@ msgid "Current allocation:"
 msgstr "Jelenlegi foglalás:"
 
 #: ../src/vmm-details.glade.h:35
-#, fuzzy
 msgid "D_ynamic"
-msgstr "Dinamikus"
+msgstr "D_inamikus"
 
 #: ../src/vmm-details.glade.h:37
 msgid "Device Model:"
@@ -3370,9 +3330,8 @@ msgid "Device Type:"
 msgstr "Eszköz típusa:"
 
 #: ../src/vmm-details.glade.h:39
-#, fuzzy
 msgid "Device model:"
-msgstr "Eszköz modellje:"
+msgstr "Eszköz modell:"
 
 #: ../src/vmm-details.glade.h:40
 #, fuzzy
@@ -3404,9 +3363,8 @@ msgid "Enable A_PIC:"
 msgstr ""
 
 #: ../src/vmm-details.glade.h:48
-#, fuzzy
 msgid "Finish Install"
-msgstr "Telepítés"
+msgstr "Telepítés befejezése"
 
 #: ../src/vmm-details.glade.h:49
 msgid "Heads:"
@@ -3427,9 +3385,8 @@ msgid "Initial _pinning:"
 msgstr "Fizikai CPU kijelzése:"
 
 #: ../src/vmm-details.glade.h:57
-#, fuzzy
 msgid "M_odel:"
-msgstr "Modell:"
+msgstr "M_odell:"
 
 #: ../src/vmm-details.glade.h:58
 #, fuzzy
