Fix some german translations (Peter Bieringer)

--- a/po/de.po
+++ b/po/de.po
@@ -912,7 +912,7 @@ msgstr "Grafische Konsole nicht unterstützt für Gast"
 
 #: ../src/virtManager/console.py:580
 msgid "Graphical console is not yet active for guest"
-msgstr "Grafische Konsole nocht nicht aktiv für Gastjetzt"
+msgstr "Grafische Konsole für Gast jetzt noch nicht aktiv"
 
 #: ../src/virtManager/console.py:584
 msgid "Connecting to graphical console for guest"
@@ -1700,7 +1700,7 @@ msgstr "Herunterfahren"
 
 #: ../src/virtManager/domain.py:1057
 msgid "Shutoff"
-msgstr "Ausschalten"
+msgstr "Ausgeschaltet"
 
 #: ../src/virtManager/domain.py:1059
 msgid "Crashed"
