l10n: Updates to Russian (ru) translation
Transmitted-via: Transifex (translate.fedoraproject.org)

--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-21 17:54-0400\n"
-"PO-Revision-Date: 2010-03-22 11:24+0300\n"
+"PO-Revision-Date: 2010-03-22 20:26+0300\n"
 "Last-Translator: Dmitry Drozdov <dmi3652@gmail.com>\n"
 "Language-Team: Russian <fedora-trans-ru@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -1179,7 +1179,7 @@ msgstr "Мост"
 
 #: ../src/virtManager/createinterface.py:203
 msgid "Bond"
-msgstr ""
+msgstr "Связь"
 
 #: ../src/virtManager/createinterface.py:205
 msgid "Ethernet"
@@ -1212,7 +1212,7 @@ msgstr "Выберите родительский интерфейс:"
 
 #: ../src/virtManager/createinterface.py:516
 msgid "Choose interfaces to bond:"
-msgstr "Выберите интерфейс для связи:"
+msgstr "Выберите интерфейсы для связи:"
 
 #: ../src/virtManager/createinterface.py:518
 msgid "Choose an unconfigured interface:"
@@ -2885,7 +2885,7 @@ msgstr "Режим мониторинга связи:"
 
 #: ../src/vmm-create-interface.glade.h:11
 msgid "Bonding configuration"
-msgstr "Присоединение конфигурации: %s"
+msgstr "Конфигурация связывания: %s"
 
 #: ../src/vmm-create-interface.glade.h:12
 msgid "Bridge configuration"
@@ -2942,7 +2942,7 @@ msgstr "IPv6"
 
 #: ../src/vmm-create-interface.glade.h:25
 msgid "Insert list desc:"
-msgstr ""
+msgstr "Введите описание списка:"
 
 #: ../src/vmm-create-interface.glade.h:26
 msgid "Interval:"
@@ -3009,7 +3009,7 @@ msgstr "тег _VLAN:"
 
 #: ../src/vmm-create-interface.glade.h:44
 msgid "ip desc"
-msgstr ""
+msgstr "описание ip"
 
 #: ../src/vmm-create-interface.glade.h:45
 #: ../src/vmm-preferences.glade.h:38
