l10n: Updates to Russian (ru) translation
Transmitted-via: Transifex (translate.fedoraproject.org)

--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-21 17:54-0400\n"
-"PO-Revision-Date: 2010-03-22 20:26+0300\n"
+"PO-Revision-Date: 2010-03-23 07:11+0300\n"
 "Last-Translator: Dmitry Drozdov <dmi3652@gmail.com>\n"
 "Language-Team: Russian <fedora-trans-ru@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -1179,7 +1179,7 @@ msgstr "Мост"
 
 #: ../src/virtManager/createinterface.py:203
 msgid "Bond"
-msgstr "Связь"
+msgstr "Агрегация"
 
 #: ../src/virtManager/createinterface.py:205
 msgid "Ethernet"
@@ -1212,7 +1212,7 @@ msgstr "Выберите родительский интерфейс:"
 
 #: ../src/virtManager/createinterface.py:516
 msgid "Choose interfaces to bond:"
-msgstr "Выберите интерфейсы для связи:"
+msgstr "Выберите интерфейсы для агрегирования:"
 
 #: ../src/virtManager/createinterface.py:518
 msgid "Choose an unconfigured interface:"
@@ -2849,7 +2849,7 @@ msgstr "<b>Настройки ARP</b>"
 
 #: ../src/vmm-create-interface.glade.h:2
 msgid "<b>Bond configuration</b>"
-msgstr "<b>Конфигурация связи</b>"
+msgstr "<b>Конфигурация агрегации</b>"
 
 #: ../src/vmm-create-interface.glade.h:3
 msgid "<b>Bridge configuration</b>"
@@ -2877,15 +2877,15 @@ msgstr "Адреса:"
 
 #: ../src/vmm-create-interface.glade.h:9
 msgid "Bond mode:"
-msgstr "Режим связи:"
+msgstr "Режим агрегации:"
 
 #: ../src/vmm-create-interface.glade.h:10
 msgid "Bond monitor mode:"
-msgstr "Режим мониторинга связи:"
+msgstr "Режим мониторинга агрегации:"
 
 #: ../src/vmm-create-interface.glade.h:11
 msgid "Bonding configuration"
-msgstr "Конфигурация связывания: %s"
+msgstr "Конфигурация агрегации"
 
 #: ../src/vmm-create-interface.glade.h:12
 msgid "Bridge configuration"
@@ -3539,7 +3539,7 @@ msgstr "<b>Процессоры</b>"
 
 #: ../src/vmm-details.glade.h:8
 msgid "<b>Hypervisor Details</b>"
-msgstr "<b>Подробности гипервизора</b>"
+msgstr "<b>Подробнее о гипервизоре</b>"
 
 #: ../src/vmm-details.glade.h:9
 msgid "<b>Machine Settings</b>"
@@ -4213,7 +4213,7 @@ msgstr "В_ыключить"
 
 #: ../src/vmm-manager.glade.h:24
 msgid "_Virtual Machine Details"
-msgstr "Подробности _вирт. машины"
+msgstr "Подробнее о _виртуальной машине"
 
 #: ../src/vmm-migrate.glade.h:1
 msgid "<b>Connectivity</b>"
@@ -4407,7 +4407,7 @@ msgstr "Настройки"
 
 #: ../src/vmm-preferences.glade.h:28
 msgid "VM Details"
-msgstr "Подробности виртуальной машины"
+msgstr "Подробнее о виртуальной машине"
 
 #: ../src/vmm-preferences.glade.h:30
 msgid "_Force Poweroff:"
